# aarno-atlas

./: README.md  RPI-001  atlas-addresses.txt  atlas-battery.js  atlas-scheduler.js  atlas-worker.js  atlas-wrapper.js  atlas.js  atlas.sh  battery_waveshare.py  cert.pem  workers-manager.js
address-files/: atlas-addresses.ssl-no-verify.txt  atlas-addresses.ssl-verify.txt  atlas-addresses.unencrypted.txt
atlas-client/: atlas-tools.js  atlas-worker.js  atlas-wrapper.js  atlas.js  workers-manager.js
atlas-client/SUITES/: nlp-suite.js
atlas-client/address-files/: atlas-addresses.ssl-no-verify.txt  atlas-addresses.ssl-verify.txt  atlas-addresses.unencrypted.txt
atlas-client/benchmarks/crypto_benchmark/: aarno-offload-funcs.crypto.txt  crypto-wrapper.js  demo.js  run.js
atlas-client/benchmarks/crypto_benchmark/crypto-es/lib/: enc-base64.js
atlas-client/benchmarks/jimp-npm/: boston_raw.js  read_raw.js  require-boston-offload.json
atlas-client/benchmarks/math/: aarno-offload-funcs.math.txt  math.js  run.js
atlas-guides/: atlas-pi.md  setup_sgx.md
atlas-qjs/src/: CMakeLists.txt  Makefile  Makefile.cross  Makefile.debug  passport.h  qjs.c  qjscalc.c  quickjs-libc.c  quickjs.c  repl.c
atlas-qjs/x-compile/: armv6-rpi-linux-gnueabihf.cmake
atlas-worker/: Makefile  evaluator.js
atlas-worker/App/: App.cpp  nw.cpp  nw.h  ocalls.cpp  wqueue.h
atlas-worker/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  ocall.cpp  sgx_funcs.h
atlas-worker/Enclave/isolated/: qjs.c  quickjs-libc.c  quickjs.c  sgx.h
atlas-worker/simple/: CMakeLists.txt  Makefile  ProcessClient.cpp  sediment.cpp  simple.cpp
atlas-worker/utils/log/: sgx_log.h
benchmarks/jimp-npm/: read_raw.js  require-jimp-offload.txt
docker/: Dockerfile  config  glibc.sh  run-servers.sh
docker/certs/: cert.pem  key.pem
docs/: Building-Atlas.md  RunningSediment.md
ra/: CMakeLists.txt
ra/apps/common/: Prover.cpp  Prover.hpp
ra/apps/rpi/: BoardRPI.cpp  BoardRPI.hpp  RPIProver.cpp
ra/configs/boards/: RAP_Server  RPI-001
ra/data/: sediment.db
ra/modules/protocol/: CMakeLists.txt  Crypto.cpp  ICalAuthToken.hpp  Log.cpp  Log.hpp  StateMachine.cpp  StateMachine.hpp  Vector.hpp
ra/servers/common/: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  EndpointSock.cpp  EndpointSock.hpp  SSLEndpointSock.hpp  Server.cpp  Server.hpp
ra/servers/firewall/: Firewall.cpp  Firewall.hpp
ra/servers/verifier/: Verifier.cpp  Verifier.hpp
test/: require-test.py
